--- a/index.html
+++ b/index.html
@@ -1,119 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Web 3.0 Layout</title>
-  <link rel="stylesheet" href="index.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Web 3.0 Layout</title>
+    <link rel="stylesheet" href="index.css" />
 </head>
+
 <body>
-  <header class="header">
-    <img src="assets/images/logo.svg" alt="Website logo" class="logo" />
+    <header class="header">
+        <img src="assets/images/logo.svg" alt="Website logo" class="logo" />
 
-    <nav class="nav-items">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">New</a></li>
-        <li><a href="#">Popular</a></li>
-        <li><a href="#">Trending</a></li>
-        <li><a href="#">Categories</a></li>
-      </ul>
-    </nav>
+        <nav class="nav-items">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">New</a></li>
+                <li><a href="#">Popular</a></li>
+                <li><a href="#">Trending</a></li>
+                <li><a href="#">Categories</a></li>
+            </ul>
+        </nav>
 
-    <div id="hamburger-icon">
-      <img src="assets/images/icon-menu.svg" alt="Open menu" />
+        <div id="menu-button">
+            <img src="assets/images/icon-menu.svg" alt="Open menu" />
+        </div>
+
+    </header>
+
+    <div id="mobile-menu" class="mobile-menu">
+        <div id="close-menu">
+            <img src="assets/images/icon-menu-close.svg" alt="Close menu" />
+        </div>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">New</a></li>
+            <li><a href="#">Popular</a></li>
+            <li><a href="#">Trending</a></li>
+            <li><a href="#">Categories</a></li>
+        </ul>
     </div>
-  </header>
 
-  <!-- Mobile Navigation -->
-  <div id="mobile-menu" class="mobile-menu">
-    <div id="close-menu">
-      <img src="assets/images/icon-menu-close.svg" alt="Close menu" />
-    </div>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">New</a></li>
-      <li><a href="#">Popular</a></li>
-      <li><a href="#">Trending</a></li>
-      <li><a href="#">Categories</a></li>
-    </ul>
-  </div>
+    <main>
+        <section class="hero-section">
+            <div class="left-content">
+                <div class="hero-img">
+                    <picture>
+                        <source media="(max-width: 999px)" srcset="assets/images/image-web-3-mobile.jpg" />
+                        <img src="assets/images/image-web-3-desktop.jpg" alt="Web 3.0 Illustration" />
+                    </picture>
+                </div>
+                <div class="main-text">
+                    <h1>The Bright<br>Future of<br>Web 3.0?</h1>
+                    <div class="para">
+                        <p>
+                            We dive into the next evolution of the web that<br>
+                            claims to put the power of the platforms back<br>
+                            into the hands of the people. But is it really<br>
+                            fulfilling its promise?
+                        </p>
+                        <button class="btn">Read more</button>
+                    </div>
+                </div>
+            </div>
 
-  <main>
-    <section class="hero-section">
-      <div class="left-content">
-        <div class="hero-img">
-          <picture>
-            <source media="(max-width: 999px)" srcset="assets/images/image-web-3-mobile.jpg" />
-            <img src="assets/images/image-web-3-desktop.jpg" alt="Web 3.0 Illustration" />
-          </picture>
-        </div>
-        <div class="main-text">
-          <h1>The Bright<br>Future of<br>Web 3.0?</h1>
-          <div class="para">
-            <p>
-              We dive into the next evolution of the web that<br>
-              claims to put the power of the platforms back<br>
-              into the hands of the people. But is it really<br>
-              fulfilling its promise?
-            </p>
-            <button class="btn">Read more</button>
-          </div>
-        </div>
-      </div>
+            <aside class="right-block">
+                <h1>New</h1>
+                <div class="news1">
+                    <h3>Hydrogen VS Electric Cars</h3>
+                    <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+                    <hr />
+                </div>
+                <div class="news2">
+                    <h3>The Downsides of AI Artistry</h3>
+                    <p>What are the possible adverse effects of on-demand AI image generation?</p>
+                    <hr />
+                </div>
+                <div class="news3">
+                    <h3>Is VC Funding Drying Up?</h3>
+                    <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+                </div>
+            </aside>
+        </section>
 
-      <aside class="right-block">
-        <h1>New</h1>
-        <div class="news1">
-          <h3>Hydrogen VS Electric Cars</h3>
-          <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
-          <hr />
-        </div>
-        <div class="news2">
-          <h3>The Downsides of AI Artistry</h3>
-          <p>What are the possible adverse effects of on-demand AI image generation?</p>
-          <hr />
-        </div>
-        <div class="news3">
-          <h3>Is VC Funding Drying Up?</h3>
-          <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
-        </div>
-      </aside>
-    </section>
+        <section class="second-section">
+            <div class="card">
+                <img src="assets/images/image-retro-pcs.jpg" alt="Retro PC" />
+                <div class="card-content">
+                    <span class="card-number">01</span>
+                    <h3>Reviving Retro PCs</h3>
+                    <p>What happens when old PCs are given modern upgrades?</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="assets/images/image-top-laptops.jpg" alt="Laptop" />
+                <div class="card-content">
+                    <span class="card-number">02</span>
+                    <h3>Top 10 Laptops of 2022</h3>
+                    <p>Our best picks for various needs and budgets.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="assets/images/image-gaming-growth.jpg" alt="Gaming controller" />
+                <div class="card-content">
+                    <span class="card-number">03</span>
+                    <h3>The Growth of Gaming</h3>
+                    <p>How the pandemic has sparked fresh opportunities.</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
-    <section class="second-section">
-      <div class="card">
-        <img src="assets/images/image-retro-pcs.jpg" alt="Retro PC" />
-        <div class="card-content">
-          <span class="card-number">01</span>
-          <h3>Reviving Retro PCs</h3>
-          <p>What happens when old PCs are given modern upgrades?</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="assets/images/image-top-laptops.jpg" alt="Laptop" />
-        <div class="card-content">
-          <span class="card-number">02</span>
-          <h3>Top 10 Laptops of 2022</h3>
-          <p>Our best picks for various needs and budgets.</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="assets/images/image-gaming-growth.jpg" alt="Gaming controller" />
-        <div class="card-content">
-          <span class="card-number">03</span>
-          <h3>The Growth of Gaming</h3>
-          <p>How the pandemic has sparked fresh opportunities.</p>
-        </div>
-      </div>
-    </section>
-  </main>
+    <footer class="footer">
+  Challenge by <a href="https://www.crio.do/" target="_blank">Frontend Mentor</a>.  
+  Coded by <a href="https://github.com/darshann345" target="_blank">Darshan N</a>.
+</footer>
 
-  <footer class="footer">
-    Challenge by <a href="https://www.crio.do/" target="_blank">Frontend Mentor</a>.  
-    Coded by <a href="https://www.github.com/darshann345" target="_blank">Darshan N</a>.
-  </footer>
 
-  <script src="index.js" defer></script>
+    <script src="index.js" defer></script>
 </body>
+
 </html>
