--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
   <footer class="footer">
     Challenge by <a href="https://www.crio.do/" target="_blank">Frontend Mentor</a>.  
-    Coded by <a href="https://www.github.com/darshann345" target="_blank">Darshan N</a>.
+    Coded by <a href="https://github.com/darshann345" target="_blank">Darshan N</a>.
   </footer>
 
   <script src="index.js" defer></script>
