--- a/index.html
+++ b/index.html
@@ -11,20 +11,19 @@
     <img src="assets/images/logo.svg" alt="Website logo" class="logo" />
 
     <!-- Navigation -->
-<nav class="nav-items">
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">New</a></li>
-    <li><a href="#">Popular</a></li>
-    <li><a href="#">Trending</a></li>
-    <li><a href="#">Categories</a></li>
-  </ul>
-</nav>
+    <nav class="nav-items">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">New</a></li>
+        <li><a href="#">Popular</a></li>
+        <li><a href="#">Trending</a></li>
+        <li><a href="#">Categories</a></li>
+      </ul>
+    </nav>
 
-<div id="menu-button">
-  <img src="assets/images/icon-menu.svg" alt="Open menu" />
-</div>
-
+    <div id="hamburger-icon">
+      <img src="assets/images/icon-menu.svg" alt="Open menu" />
+    </div>
   </header>
 
   <div id="mobile-menu" class="mobile-menu">
@@ -111,10 +110,9 @@
   </main>
 
   <footer class="footer">
-  Challenge by <a href="https://www.crio.do/" target="_blank">Frontend Mentor</a>.  
-  Coded by <a href="https://github.com/darshann345" target="_blank">Darshan N</a>.
-</footer>
-
+    Challenge by <a href="https://www.crio.do/" target="_blank">Frontend Mentor</a>.  
+    Coded by <a href="https://github.com/darshann345" target="_blank">Darshan N</a>.
+  </footer>
 
   <script src="index.js" defer></script>
 </body>
