--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
   </header>
 
-  <div id="mobile-menu" class="mobile-menu">
+  <div id="menu-button" class="menu-button">
     <div id="close-menu">
       <img src="assets/images/icon-menu-close.svg" alt="Close menu" />
     </div>
