--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
           </picture>
         </div>
         <div class="main-text">
-          <h1>The Bright<br>Future of<br>Web 3.0?</h1>
+          <h1>The Bright
+            Future of
+            Web 3.0?</h1>
           <div class="para">
             <p>
               We dive into the next evolution of the web that<br>
