--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   <header class="header">
     <img src="assets/images/logo.svg" alt="Website logo" class="logo" />
 
-    <!-- Navigation -->
     <nav class="nav-items">
-      <ul>
+      <ul class="nav-itmes"> 
         <li><a href="#">Home</a></li>
         <li><a href="#">New</a></li>
         <li><a href="#">Popular</a></li>
@@ -43,7 +42,7 @@
       <div class="left-content">
         <div class="hero-img">
           <picture>
-<source media="(max-width: 999px)" srcset="assets/images/image-web-3-mobile.jpg" />
+            <source media="(max-width: 999px)" srcset="assets/images/image-web-3-mobile.jpg" />
             <img src="assets/images/image-web-3-desktop.jpg" alt="Web 3.0 Illustration" />
           </picture>
         </div>
