--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Web 3.0 Layout</title>
   <link rel="stylesheet" href="index.css" />
 </head>
+
 <body>
   <header class="header">
     <img src="assets/images/logo.svg" alt="Website logo" class="logo" />
 
     <nav class="nav-items">
-      <ul class="nav-itmes"> 
+      <ul class="nav-itmes">
         <li><a href="#">Home</a></li>
         <li><a href="#">New</a></li>
         <li><a href="#">Popular</a></li>
@@ -25,7 +27,7 @@
   </header>
 
   <div id="menu-button" class="menu-button">
-    <div id="close-menu">
+    <div id="menu-close">
       <img src="assets/images/icon-menu-close.svg" alt="Close menu" />
     </div>
     <ul>
@@ -110,10 +112,11 @@
   </main>
 
   <footer class="footer">
-    Challenge by <a href="https://www.crio.do/" target="_blank">Frontend Mentor</a>.  
+    Challenge by <a href="https://www.crio.do/" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/darshann345" target="_blank">Darshan N</a>.
   </footer>
 
   <script src="index.js" defer></script>
 </body>
+
 </html>
