--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="assets/images/logo.svg" alt="Website logo" class="logo" />
 
     <nav class="nav-items">
-      <ul class="nav-itmes">
+      <ul class="nav-items"> <!-- Fixed typo: changed 'nav-itmes' to 'nav-items' -->
         <li><a href="#">Home</a></li>
         <li><a href="#">New</a></li>
         <li><a href="#">Popular</a></li>
@@ -49,9 +49,7 @@
           </picture>
         </div>
         <div class="main-text">
-          <h1>The Bright
-            Future of
-            Web 3.0?</h1>
+          <h1>The Bright Future of Web 3.0?</h1>
           <div class="para">
             <p>
               We dive into the next evolution of the web that<br>
